# JCUSI-AY13

./: README.md  laptop_MAC_addresses.xlsx
ARTIGO_PICO/: README
ARTIGO_PICO/.svn/: entries
AY12Summer/: JCUSI_Artigo_Software_Architecture.pptx  JCUSI_Network_Structure.pptx  TODO.txt
AY12Summer/compass/C100_Compass/: C100.C  C100.H  C100USR.C  C100USR.H  C100USR.PRJ  CLIST.TXT  FLD_CAL.C  PRM_EDIT.C  REVD_T_E.DIF  SYS_DFLT.C  TERMINAL.C  TESTPROC.SAM  USER.C  _MACS START HERE.html  autorun.inf
AY12_products/: FDR.pptx  Final Report.docx  JCUSI_SD_Conference_Poster_Final.pptx  SoftwareArchitecture.pptx  howto.txt  ipforward.py
AY12_products/FINAL_CODE/: JCUSIv1.1.pptx  Message packet formats.doc  User_Manual_Final_Revisions.docx
AY12_products/FINAL_CODE/Command Center 3/: Command Center 3.sln
AY12_products/FINAL_CODE/EOD/: ipforwardV3.py
AY12_products/FINAL_CODE/EOD/SCCcode/RTPVideoExamples/: CMakeLists.txt  VideoExample  VideoExample.cpp  VideoStream.cpp  VideoStream.hpp  cmake_install.cmake  installation_instructions.txt
AY12_products/FINAL_CODE/JCCcode/: JCCserver.py  TestUpdateDB.py  cleardb.py  commandcenter_db.targets 20110422 1539.sql  modified_cc.sql  testClnt1.py  testClnt2.py  updateDB.py
AY12_products/FINAL_CODE/Visio Docs/: ClassDiagram.vsd  JCUSI db model.vsd  JCUSI db schema.vsd  network_diagram.vsd  new_ClassDiagram.vsd
Amrel_Stuff/.svn/: entries
Amrel_Stuff/.svn/text-base/: Amrel_LT_HD_replacement_Directions.pdf.svn-base
DOD_Robotics_RoadMap/.svn/: entries
Hokuyo_LRF/.svn/: entries
(+53 files in other folders)
